--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--Custom Stylesheet-->
     <link rel="stylesheet" href="style.css">
 
-    <title>Java Calculator</title>
+    <title>JavaScript Calculator</title>
 </head>
 <body>
 
@@ -19,12 +19,12 @@
 
             <!--Calculator-->
             <div class="output">
-                <input type="text" class="screen" id="">
+                <input type="text" class="screen" id="screen">
             </div>
 
             <!--Button Arrangements-->
             <div class="buttons">
-                <button class="btn" onclick="clear()">C</button>
+                <button class="btn" onclick="clearDisplay()">C</button>
                 <div class="row">
                     <button class="btn" onclick="clicking(7)">7</button>
                     <button class="btn" onclick="clicking(8)">8</button>
@@ -32,21 +32,21 @@
                     <button class="btn" onclick="clicking('/')">÷</button>
                 </div>
                 <div class="row">
-                    <button class="btn" onclick="clicking(7)">4</button>
-                    <button class="btn" onclick="clicking(8)">5</button>
-                    <button class="btn" onclick="clicking(9)">6</button>
+                    <button class="btn" onclick="clicking(4)">4</button>
+                    <button class="btn" onclick="clicking(5)">5</button>
+                    <button class="btn" onclick="clicking(6)">6</button>
                     <button class="btn" onclick="clicking('*')">x</button>
                 </div>
                 <div class="row">
-                    <button class="btn" onclick="clicking(7)">1</button>
-                    <button class="btn" onclick="clicking(8)">2</button>
-                    <button class="btn" onclick="clicking(9)">3</button>
+                    <button class="btn" onclick="clicking(1)">1</button>
+                    <button class="btn" onclick="clicking(2)">2</button>
+                    <button class="btn" onclick="clicking(3)">3</button>
                     <button class="btn" onclick="clicking('-')">-</button>
                 </div>
                 <div class="row">
                     <button class="btn" onclick="clicking('.')">.</button>
                     <button class="btn" onclick="clicking(0)">0</button>
-                    <button class="btn" onclick="clicking('=')">=</button>
+                    <button class="btn" onclick="equalClick()">=</button>
                     <button class="btn" onclick="clicking('+')">+</button>
                 </div>
             </div>
